WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114342
[ATK] REGRESSION(
r148033
): Add a stub for AccessibilityUIElement::pathDescription().
https://bugs.webkit.org/show_bug.cgi?id=114342
Summary
[ATK] REGRESSION(r148033): Add a stub for AccessibilityUIElement::pathDescrip...
Raphael Kubo da Costa (:rakuco)
Reported
2013-04-10 02:10:42 PDT
[ATK] REGRESSION(
r148033
): Add a stub for AccessibilityUIElement::pathDescription().
Attachments
Patch
(1.77 KB, patch)
2013-04-10 02:12 PDT
,
Raphael Kubo da Costa (:rakuco)
gyuyoung.kim
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Raphael Kubo da Costa (:rakuco)
Comment 1
2013-04-10 02:12:00 PDT
Created
attachment 197224
[details]
Patch
Gyuyoung Kim
Comment 2
2013-04-10 02:15:52 PDT
rs=me
Raphael Kubo da Costa (:rakuco)
Comment 3
2013-04-10 02:16:04 PDT
Committed
r148086
: <
http://trac.webkit.org/changeset/148086
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug