[ATK] REGRESSION(r148033): Add a stub for AccessibilityUIElement::pathDescription(). https://bugs.webkit.org/show_bug.cgi?id=114342

Reviewed by Gyuyoung Kim.

Commit 148033 only added an implementation for the Mac port, which made
other ports fail most tests since loading the injected bundle failed
with a missing symbol.

* WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp:
(WTR::AccessibilityUIElement::pathDescription):

Canonical link: https://commits.webkit.org/132707@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148086 268f45cc-cd09-0410-ab3c-d52691b4dbfc